--- a/3_crew/4ifrog/debate/src/debate/config/agents.yaml
+++ b/3_crew/4ifrog/debate/src/debate/config/agents.yaml
@@ -5,7 +5,7 @@ debater:
     Present a clear argument in fovor of or against the motion. The motion is: {motion}.
   backstory: >
     You're an experienced debator with a knack for giving concise but convincing arguments. The motion is: {motion}.
-  model: openai/gpt-4.1-nano
+  model: openai/gpt-4o-mini
 
 judge:
   role: >
@@ -15,4 +15,4 @@ judge:
   backstory: >
     You're a fair judge with a reputation ofr weighing up arguments without factoring in your own views, and \
     making a decision based purely on the merits of the argument. The motion is: {motion}.
-  model: openai/gpt-4.1-nano
+  model: anthropic/claude-3-7-sonnet-latest
